Fixed margin shifting splitsectionhero layout

--- a/site/app/_sections/SplitHeroSection/SplitHeroSection.module.css
+++ b/site/app/_sections/SplitHeroSection/SplitHeroSection.module.css
@@ -3,8 +3,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 30rem;
-  margin: 4rem 1rem;
+  height: auto;
+  min-height: 16rem;
+  margin: 4rem 0rem;
+  padding: 0rem 1rem;
   box-sizing: border-box;
 }
 
@@ -27,6 +29,7 @@
     min-height: 12rem;
     max-height: 48rem;
     margin: 8rem 0rem;
+    padding: 0rem;
   }
 
   :global(.SectionInner).heroInner {
